# CodeTrain

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  README.md  SKILL.md  pyproject.toml
codetrain/: __init__.py  call_llm.py  config.py  core.py  logistics.py
docs/: LLM_SETUP.md  PHILOSOPHY.md
examples/: basic_usage.py  batch_translation.py  chatbot.py  data_pipeline.py  ecommerce_fulfillment.py  hello_world.py  web_crawler.py
tests/: test_core.py
translations/: translation_CHINESE.txt  translation_FRENCH.txt  translation_GERMAN.txt  translation_SPANISH.txt  translation_SWAHILI.txt
