[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "codetrain"
version = "0.1.0"
description = "A minimalist workflow framework inspired by PocketFlow, designed for African startups with logistics-inspired terminology"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
authors = [
    {name = "Ricky Macharm", email = "Ricky.Macharm@speedykom.de"}
]
keywords = ["workflow", "pocketflow", "agents", "llm", "automation", "africa", "logistics", "hustle", "business-process", "ai", "code-train"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "requests>=2.28.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.1.0",
    "mypy>=1.0",
]

[project.urls]
Homepage = "https://github.com/Speedykom/CodeTrain"
Repository = "https://github.com/Speedykom/CodeTrain"
Issues = "https://github.com/Speedykom/CodeTrain/issues"

[tool.hatch.build.targets.wheel]
packages = ["codetrain"]

[tool.uv]
package = true
python-preference = "only-system"

[tool.uv.pip]
generate-hashes = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"

[tool.ruff]
line-length = 88
target-version = "py38"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]
ignore = ["E501"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
